2004-10-18  Werner Lemberg  <wl@gnu.org>

	* scripts/lilypond-book.py (Snippet, Include_snippet)
	[replacement_text]: Use group `match'.

2004-10-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/macros.itexi: Use @ref instead of @inforef
	for html.  Apparently, ``you should'' in texinfo documentation is
	merely a guideline that can safely be ignored.

	* elisp/lilypond-init.el (auto-mode-alist): Add .ily to
	auto-mode-alist.

	* input/test/engraver-example.ily: 
	* input/regression/allfontstyle.ily: Rename, update users.

2004-10-16  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/lilypond-book.itely: add more details about
	building .lytex files.

	* Documentation/user/examples.itely: added piano-lyrics template

	* input/template/piano-4-voices.ly, piano-lyrics.ly: remove.

	* input/GNUmakefile: remove "templates" from build subdirs.

	* input/template: removed.

2004-10-16  Werner Lemberg  <wl@gnu.org>

	* scripts/lilypond-book.py (snippet_res): Define group `match'
	everywhere.
	Accept more spaces between commands and its arguments and options.
	Fix some regexps.
	(output): Remove some newlines in string values and suppress spaces
	in output.
	(output_texinfo): Output `output_print_filename' only if not empty.
	(Lilypond_snippet)[find_toplevel_snippets]: Use group `match'.

2004-10-16  Werner Lemberg  <wl@gnu.org>

	* scm/framework-tex.scm (font-load-command, define-fonts): Protect
	some TeX line ends with `%' to avoid additional horizontal space in
	output.

	* scripts/lilypond-book.py: Unexpand spaces to tabs.
	(snippet_res): Use `x' modifier to represent regular expressions
	in a friendlier way.
	Fix `lilypond_block' for LaTeX to accept `%\end{lilypond}'.
	(find_toplevel_snippets): Don't use indices from match group 0,
	which is the whole pattern space, but group 1.

2004-10-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/direction.hh (enum Direction): add
	DIRECTION_LIMIT
